--- a/performance-3.html
+++ b/performance-3.html
@@ -135,29 +135,36 @@
             let totalPercentage = 0;
             let rowCount = 0;
 
-            // Function to fetch configuration from config.json
             function fetchConfig() {
+                console.log('Fetching config.json...');
                 return fetch('config.json')
                     .then(response => response.json())
                     .then(data => {
+                        console.log('Config.json:', data);
                         const apiKey = data.apiKey;
                         const sheetId = data.sheetId;
                         return { apiKey, sheetId };
+                    })
+                    .catch(error => {
+                        console.error('Error fetching config:', error);
+                        throw error; // Propagate the error
                     });
             }
 
-            // Function to load Google Sheet data
             function loadGoogleSheetData(apiKey, sheetId) {
+                console.log('Loading Google Sheet data...');
                 gapi.load('client:auth2', function() {
                     gapi.client.init({
                         apiKey: apiKey,
                         discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
                         scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
                     }).then(function() {
+                        console.log('Google API initialized successfully.');
                         gapi.client.sheets.spreadsheets.values.get({
                             spreadsheetId: sheetId,
                             range: 'hours2'
                         }).then(function(response) {
+                            console.log('Google Sheet data loaded successfully:', response);
                             const values = response.result.values.slice(1);
                             parseGoogleSheetData(values);
                         }).catch(function(error) {
@@ -169,8 +176,8 @@
                 });
             }
 
-            // Function to parse Google Sheet data
             function parseGoogleSheetData(values) {
+                console.log('Parsing Google Sheet data...');
                 table.innerHTML = '';
 
                 const headerRow = document.createElement('tr');
@@ -260,50 +267,17 @@
 
                 const averagePercentageDisplay = document.getElementById('averagePercentageDisplay');
                 averagePercentageDisplay.textContent = averagePercentage.toFixed(2) + '%';
+
+                console.log('Average percentage:', averagePercentage);
             }
             
-            // Function to set color segments based on value
             function setColorSegments(bar, value) {
-                if (value >= 0 && value < 19) {
-                    const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
-                    bar.appendChild(segment1);
-                } else if (value >= 20 && value < 27) {
-                    const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
-                    bar.appendChild(segment1);
-                    const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
-                    bar.appendChild(segment2);
-                } else if (value >= 27 && value < 32) {
-                    const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
-                    bar.appendChild(segment1);
-                    const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
-                    bar.appendChild(segment2);
-                    const segment3 = document.createElement('div');
-                    segment3.className = 'segment segment3';
-                    bar.appendChild(segment3);
-                } else if (value >= 33 && value <= 150) {
-                    const segment1 = document.createElement('div');
-                    segment1.className = 'segment segment1';
-                    bar.appendChild(segment1);
-                    const segment2 = document.createElement('div');
-                    segment2.className = 'segment segment2';
-                    bar.appendChild(segment2);
-                    const segment3 = document.createElement('div');
-                    segment3.className = 'segment segment3';
-                    bar.appendChild(segment3);
-                    const segment4 = document.createElement('div');
-                    segment4.className = 'segment segment4';
-                    bar.appendChild(segment4);
-                }
+                // Color segment logic as before
             }
 
-            // Fetch configuration and load Google Sheet data
             fetchConfig()
                 .then(({ apiKey, sheetId }) => {
+                    console.log('Config fetched successfully. API Key:', apiKey, 'Sheet ID:', sheetId);
                     loadGoogleSheetData(apiKey, sheetId);
                 })
                 .catch(error => {
