--- a/performance-3.html
+++ b/performance-3.html
@@ -151,30 +151,44 @@
                 });
         }
 
-        function loadGoogleSheetData(apiKey, spreadsheetId) {
-            console.log('Loading Google Sheet data...');
-            gapi.load('client:auth2', function() {
-                gapi.client.init({
-                    apiKey: apiKey,
-                    discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-                    scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
-                }).then(function() {
-                    console.log('Google API initialized successfully.');
-                    gapi.client.sheets.spreadsheets.values.get({
-                        spreadsheetId: spreadsheetId, // Corrected variable name
-                        range: 'hours2'
-                    }).then(function(response) {
-                        console.log('Google Sheet data loaded successfully:', response);
-                        const values = response.result.values.slice(1);
-                        parseGoogleSheetData(values);
-                    }).catch(function(error) {
-                        console.error('Error loading Google Sheet data:', error);
-                    });
-                }).catch(function(error) {
-                    console.error('Error initializing gapi:', error);
-                });
+       function loadGoogleSheetData(apiKey, spreadsheetId) {
+    console.log('Loading Google Sheet data...');
+    gapi.load('client:auth2', function() {
+        gapi.client.init({
+            apiKey: apiKey,
+            discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+            scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
+        }).then(function() {
+            console.log('Google API initialized successfully.');
+            gapi.client.sheets.spreadsheets.values.get({
+                spreadsheetId: spreadsheetId,
+                range: 'hours2'
+            }).then(function(response) {
+                console.log('Google Sheet data loaded successfully:', response);
+                const values = response.result.values.slice(1);
+                console.log('Parsed values:', values); // Log parsed values
+                parseGoogleSheetData(values);
+            }).catch(function(error) {
+                console.error('Error loading Google Sheet data:', error);
             });
-        }
+        }).catch(function(error) {
+            console.error('Error initializing gapi:', error);
+        });
+    });
+}
+
+function parseGoogleSheetData(values) {
+    console.log('Parsing Google Sheet data...');
+    table.innerHTML = '';
+
+    // Rest of the parsing logic...
+
+    values.forEach(rowData => {
+        console.log('Row data:', rowData); // Log each row's data
+
+        // Rest of the parsing logic...
+    });
+}
 
         function parseGoogleSheetData(values) {
             console.log('Parsing Google Sheet data...');
