--- a/performance-3.html
+++ b/performance-3.html
@@ -68,6 +68,7 @@
             background: linear-gradient(to right, red 0%, orange 35%, gold 45%, green 85%);
             position: relative;
             height: 20px;
+        .column4 { width: 200px; }
         }
 
         .percentage {
