--- a/performance-3.html
+++ b/performance-3.html
@@ -182,109 +182,96 @@ function parseGoogleSheetData(values) {
     console.log('Parsing Google Sheet data...');
     table.innerHTML = '';
 
-    // Rest of the parsing logic...
+    const headerRow = document.createElement('tr');
+    const columnHeader1 = document.createElement('th');
+    columnHeader1.textContent = 'Name';
+    columnHeader1.classList.add('column-header');
+    headerRow.appendChild(columnHeader1);
+
+    const columnHeader2 = document.createElement('th');
+    columnHeader2.textContent = 'Weekly Hours';
+    columnHeader2.classList.add('column-header');
+    headerRow.appendChild(columnHeader2);
+
+    const columnHeader4 = document.createElement('th');
+    columnHeader4.textContent = 'Goal Progress';
+    columnHeader4.classList.add('column-header');
+    headerRow.appendChild(columnHeader4);
+
+    const columnHeader3 = document.createElement('th');
+    columnHeader3.textContent = 'YTD Performance';
+    columnHeader3.classList.add('column-header');
+    headerRow.appendChild(columnHeader3);
+
+    table.appendChild(headerRow);
 
     values.forEach(rowData => {
-        console.log('Row data:', rowData); // Log each row's data
+        if (rowData[0]) {
+            const row = document.createElement('tr');
+            rowCount++;
 
-        // Rest of the parsing logic...
+            const cell1 = document.createElement('td');
+            cell1.textContent = rowData[0];
+            cell1.classList.add('column1');
+            row.appendChild(cell1);
+
+            const cell2 = document.createElement('td');
+            const bar2 = document.createElement('div');
+            bar2.className = 'bar';
+            setColorSegments(bar2, parseInt(rowData[1]));
+            cell2.appendChild(bar2);
+            cell2.classList.add('column2');
+            row.appendChild(cell2);
+
+            const cell4 = document.createElement('td');
+            const bar4 = document.createElement('div');
+            bar4.className = 'bar';
+            setColorSegments(bar4, parseFloat(rowData[3]));
+            cell4.appendChild(bar4);
+            cell4.classList.add('column4');
+            row.appendChild(cell4);
+
+            const cell3 = document.createElement('td');
+            cell3.classList.add('column3');
+            const gauge = document.createElement('div');
+            gauge.className = 'bar';
+            const percentage = document.createElement('div');
+            percentage.className = 'percentage';
+            const percentageValue = parseFloat(rowData[2]) * 100;
+            totalPercentage += percentageValue;
+            percentage.textContent = percentageValue.toFixed(2) + '%';
+            gauge.appendChild(percentage);
+            const indicator = document.createElement('div');
+            indicator.className = 'indicator';
+            const indicatorPosition = Math.min(percentageValue, 150);
+            indicator.style.left = (indicatorPosition / 150) * 100 + '%';
+            gauge.appendChild(indicator);
+            cell3.appendChild(gauge);
+            row.appendChild(cell3);
+
+            table.appendChild(row);
+        }
     });
+
+    const averagePercentage = totalPercentage / rowCount;
+
+    const averageGaugeContainer = document.getElementById('averageGaugeContainer');
+    const averageGauge = document.getElementById('averageGauge');
+    const averageIndicator = document.createElement('div');
+    averageIndicator.style.width = averagePercentage + '%';
+    averageGauge.appendChild(averageIndicator);
+
+    const verticalLine = document.createElement('div');
+    verticalLine.className = 'vertical-line';
+    verticalLine.style.setProperty('--percentage', averagePercentage);
+    averageGauge.appendChild(verticalLine);
+
+    const averagePercentageDisplay = document.getElementById('averagePercentageDisplay');
+    averagePercentageDisplay.textContent = averagePercentage.toFixed(2) + '%';
+
+    console.log('Average percentage:', averagePercentage);
 }
 
-        function parseGoogleSheetData(values) {
-            console.log('Parsing Google Sheet data...');
-            table.innerHTML = '';
-
-            const headerRow = document.createElement('tr');
-            const columnHeader1 = document.createElement('th');
-            columnHeader1.textContent = 'Name';
-            columnHeader1.classList.add('column-header');
-            headerRow.appendChild(columnHeader1);
-
-            const columnHeader2 = document.createElement('th');
-            columnHeader2.textContent = 'Weekly Hours';
-            columnHeader2.classList.add('column-header');
-            headerRow.appendChild(columnHeader2);
-
-            const columnHeader4 = document.createElement('th');
-            columnHeader4.textContent = 'Goal Progress';
-            columnHeader4.classList.add('column-header');
-            headerRow.appendChild(columnHeader4);
-
-            const columnHeader3 = document.createElement('th');
-            columnHeader3.textContent = 'YTD Performance';
-            columnHeader3.classList.add('column-header');
-            headerRow.appendChild(columnHeader3);
-
-            table.appendChild(headerRow);
-
-            values.forEach(rowData => {
-                if (rowData[0]) {
-                    const row = document.createElement('tr');
-                    rowCount++;
-
-                    const cell1 = document.createElement('td');
-                    cell1.textContent = rowData[0];
-                    cell1.classList.add('column1');
-                    row.appendChild(cell1);
-
-                    const cell2 = document.createElement('td');
-                    const bar = document.createElement('div');
-                    bar.className = 'bar'; // Use the 'bar' class for styling
-                    setColorSegments(bar, parseInt(rowData[1]));
-                    cell2.appendChild(bar);
-                    cell2.classList.add('column2'); // Add the 'column2' class for additional styling
-                    row.appendChild(cell2);
-                    
-                    const cell4 = document.createElement('td');
-                    const goalBar = document.createElement('div');
-                    goalBar.className = 'bar'; // Use the 'bar' class for styling
-                    setColorSegments(goalBar, parseFloat(rowData[3]));
-                    cell4.appendChild(goalBar);
-                    cell4.classList.add('column4'); // Add the 'column4' class for additional styling
-                    row.appendChild(cell4);
-
-
-                    const cell3 = document.createElement('td');
-                    cell3.classList.add('column3'); // Corrected class name
-                    const gauge = document.createElement('div');
-                    gauge.className = 'bar';
-                    const percentage = document.createElement('div');
-                    percentage.className = 'percentage';
-                    const percentageValue = parseFloat(rowData[2]) * 100;
-                    totalPercentage += percentageValue;
-                    percentage.textContent = percentageValue.toFixed(2) + '%';
-                    gauge.appendChild(percentage);
-                    const indicator = document.createElement('div');
-                    indicator.className = 'indicator';
-                    const indicatorPosition = Math.min(percentageValue, 150);
-                    indicator.style.left = (indicatorPosition / 150) * 100 + '%';
-                    gauge.appendChild(indicator);
-                    cell3.appendChild(gauge);
-                    row.appendChild(cell3);
-
-                    table.appendChild(row);
-                }
-            });
-
-            const averagePercentage = totalPercentage / rowCount;
-
-            const averageGaugeContainer = document.getElementById('averageGaugeContainer');
-            const averageGauge = document.getElementById('averageGauge');
-            const averageIndicator = document.createElement('div');
-            averageIndicator.style.width = averagePercentage + '%';
-            averageGauge.appendChild(averageIndicator);
-
-            const verticalLine = document.createElement('div');
-            verticalLine.className = 'vertical-line';
-            verticalLine.style.setProperty('--percentage', averagePercentage);
-            averageGauge.appendChild(verticalLine);
-
-            const averagePercentageDisplay = document.getElementById('averagePercentageDisplay');
-            averagePercentageDisplay.textContent = averagePercentage.toFixed(2) + '%';
-
-            console.log('Average percentage:', averagePercentage);
-        }
 
         function setColorSegments(bar, value) {
             // Color segment logic as before
