--- a/performance-3.html
+++ b/performance-3.html
@@ -53,6 +53,15 @@
             transform: translateX(-50%);
         }
 
+        .black-indicator {
+            position: absolute;
+            top: 0;
+            left: 100%;
+            width: 3px;
+            height: 100%;
+            background-color: black;
+        }
+
         .column1 { width: 200px; }
         .column2 { width: 200px; }
         .column3 {
