--- a/performance-3.html
+++ b/performance-3.html
@@ -279,7 +279,21 @@
             }
 
             function setColorSegments(bar, value) {
-                // Color segment logic as before
+                if (value <= 19) {
+                    bar.innerHTML = '<div class="segment segment1"></div>';
+                } else if (value <= 27) {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>';
+                } else if (value <= 32) {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>';
+                } else {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>' +
+                                     '<div class="segment segment4"></div>';
+                }
             }
 
             fetchConfig()
