--- a/performance-3.html
+++ b/performance-3.html
@@ -295,6 +295,24 @@
                                      '<div class="segment segment4"></div>';
                 }
             }
+            function setColorSegmentsForGoalProgress(bar, value) {
+                if (value <= 25) {
+                    bar.innerHTML = '<div class="segment segment1"></div>';
+                } else if (value <= 50) {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>';
+                } else if (value <= 75) {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>';
+                } else {
+                    bar.innerHTML = '<div class="segment segment1"></div>' +
+                                     '<div class="segment segment2"></div>' +
+                                     '<div class="segment segment3"></div>' +
+                                     '<div class="segment segment4"></div>';
+                }
+            }
+
 
             fetchConfig()
                 .then(({ apiKey, spreadsheetId }) => {
