--- a/performance-3.html
+++ b/performance-3.html
@@ -29,7 +29,7 @@
 
         th, td {
             border: 1px solid black;
-            padding: 2px;
+            padding: 1px;
             text-align: left;
         }
 
@@ -201,7 +201,7 @@
                 headerRow.appendChild(columnHeader2);
 
                 const columnHeader4 = document.createElement('th');
-                columnHeader4.textContent = 'Goal Progress';
+                columnHeader4.textContent = 'Bonus Progress';
                 columnHeader4.classList.add('column-header');
                 headerRow.appendChild(columnHeader4);
 
