--- a/dashboardpdi.html
+++ b/dashboardpdi.html
@@ -72,7 +72,7 @@
     <div class="column right-column">
         <div class="half-width-container">
             <div class="half-width-iframe">
-                <iframe src="countdown.html"></iframe>
+                <iframe src="clock.html"></iframe>
             </div>
             <div class="half-width-iframe">
                 <iframe src="test.html"></iframe>
