--- a/dashboardpdi.html
+++ b/dashboardpdi.html
@@ -46,7 +46,7 @@
         .half-width-iframe {
             flex: 1;
             overflow: hidden;
-            border-right: 2px solid black; /* Add border on the right of the first half-width iframe container */
+            border-right: 4px solid white; /* Add border on the right of the first half-width iframe container */
         }
 
         .half-width-iframe:last-child {
