--- a/performance-3.html
+++ b/performance-3.html
@@ -336,10 +336,11 @@
 </head>
 <body>
     <div class="content-container">
-        <p><b>Technician Progress</b></p>
+         <p><b>Technician Progress</b></p>
         <table id="dataTable"></table>
-        <p>Red = 1 - 19 hours Orange = 20 - 27 hours Gold = 28 - 32 hours  Green = 33+ hours</p>
-        <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
+        <p>Billed Hours: Red = 1 - 19 hours  Orange = 20 - 27 hours Gold = 28 - 32  Green = 33+ hours
+        <br>Bonus Progress: Percent to goal Green = 95%
+        <br>YTD Performance is the percentage of Billed Time to On-Premise time</p>
         <p><b>Average Shop Performance:</b></p>
         <div id="averageGaugeContainer">
             <div id="averageGauge" class="new-gauge">
