--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
         border-bottom: 2px solid #333;
         box-shadow: inset 0 -1px 0 0 #666;
         border-radius: 20px 20px 0 0;
-        color: #444;
+        color: #fff;
     }
 
     .date .day {
