--- a/test.html
+++ b/test.html
@@ -105,6 +105,9 @@
 
         // Call the function to fetch incident date
         fetchIncidentDate();
+
+        // Auto-refresh the data every hour
+        setInterval(fetchIncidentDate, 900000); // 3600000 milliseconds = 1 hour
     </script>
     <p class="text-size"><b>Days Since Last Incident</b></p>
 </body>
