--- a/test2.html
+++ b/test2.html
@@ -133,7 +133,7 @@
             document.getElementById('countdownTimer').textContent = `Next refresh in: ${minutes}:${seconds}`;
         }
 
-        // Update countdown timer immediately and then every second
+        // Update countdown timer every second
         updateCountdownTimer();
         setInterval(updateCountdownTimer, 1000);
     </script>
