--- a/test.html
+++ b/test.html
@@ -109,6 +109,7 @@
         // Auto-refresh the data every hour
         setInterval(fetchIncidentDate, 900000); // 3600000 milliseconds = 1 hour
     </script>
+        <script src="refresh.js"></script>
     <p class="text-size"><b>Days Since Last Incident</b></p>
 </body>
 </html>
