--- a/gauge-2.html
+++ b/gauge-2.html
@@ -156,6 +156,7 @@ function createChartData(gaugeValue, deltaValue, currentValue, gaugeName, revers
 // Call handleClientLoad when the page is fully loaded
 window.onload = handleClientLoad;
 </script>
+    <script src="refresh.js"></script>
 
 </body>
 </html>
