--- a/dashboard2.html
+++ b/dashboard2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+y<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -92,7 +92,7 @@
                 <iframe src="countdown.html"></iframe>
             </div>
             <div class="half-width-iframe">
-                <iframe src="test.html"></iframe>
+                <iframe src="safety1.html"></iframe>
             </div>
         </div>
         <div class="iframe-container">
