--- a/dashboardpdi.html
+++ b/dashboardpdi.html
@@ -93,7 +93,7 @@
                 <iframe src="clock.html"></iframe>
             </div>
             <div class="half-width-iframe">
-                <iframe src="test.html"></iframe>
+                <iframe src="safety1.html"></iframe>
             </div>
         </div>
         <div class="iframe-container">
