--- a/performance-3.html
+++ b/performance-3.html
@@ -348,6 +348,7 @@
             </div>
         </div>
     </div>
+    <div id="countdownTimer"></div>
     <script src="refresh.js"></script>
 </body>
 </html>
